Nuevas pruebas para comprobar la diferencia estadísticamente significativa

--- a/Proyecto Integrado 2.ipynb
+++ b/Proyecto Integrado 2.ipynb
@@ -922,7 +922,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_19308\\962760143.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_3264\\962760143.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  users_per_group = filtered_events.groupby('group', as_index=False).agg({'user_id':'nunique'})\n"
      ]
     },
@@ -1968,7 +1968,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_19308\\3935545382.py:3: FutureWarning:\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_3264\\3935545382.py:3: FutureWarning:\n",
       "\n",
       "The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "\n"
@@ -2210,15 +2210,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_19308\\1099883739.py:2: FutureWarning:\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_3264\\1099883739.py:2: FutureWarning:\n",
       "\n",
       "Calling int on a single element Series is deprecated and will raise a TypeError in the future. Use int(ser.iloc[0]) instead\n",
       "\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_19308\\1099883739.py:6: FutureWarning:\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_3264\\1099883739.py:6: FutureWarning:\n",
       "\n",
       "Calling int on a single element Series is deprecated and will raise a TypeError in the future. Use int(ser.iloc[0]) instead\n",
       "\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_19308\\1099883739.py:10: FutureWarning:\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_3264\\1099883739.py:10: FutureWarning:\n",
       "\n",
       "Calling int on a single element Series is deprecated and will raise a TypeError in the future. Use int(ser.iloc[0]) instead\n",
       "\n"
@@ -2270,7 +2270,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_19308\\4068004803.py:7: FutureWarning:\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_3264\\4068004803.py:7: FutureWarning:\n",
       "\n",
       "\n",
       "\n",
@@ -2477,7 +2477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2532,7 +2532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2550,22 +2550,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_19308\\387962519.py:2: FutureWarning:\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_3264\\387962519.py:2: FutureWarning:\n",
       "\n",
       "The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_19308\\387962519.py:2: FutureWarning:\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_3264\\387962519.py:2: FutureWarning:\n",
       "\n",
       "The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_19308\\387962519.py:2: FutureWarning:\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_3264\\387962519.py:2: FutureWarning:\n",
       "\n",
       "The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "\n"
@@ -2585,7 +2585,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>event_name</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>%_proportion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MainScreenAppear</td>\n",
+       "      <td>2476</td>\n",
+       "      <td>98.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>OffersScreenAppear</td>\n",
+       "      <td>1520</td>\n",
+       "      <td>60.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CartScreenAppear</td>\n",
+       "      <td>1238</td>\n",
+       "      <td>49.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PaymentScreenSuccessful</td>\n",
+       "      <td>1158</td>\n",
+       "      <td>46.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Tutorial</td>\n",
+       "      <td>283</td>\n",
+       "      <td>11.26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                event_name  user_id  %_proportion\n",
+       "1         MainScreenAppear     2476         98.53\n",
+       "2       OffersScreenAppear     1520         60.49\n",
+       "0         CartScreenAppear     1238         49.26\n",
+       "3  PaymentScreenSuccessful     1158         46.08\n",
+       "4                 Tutorial      283         11.26"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_events_247"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2643,6 +2727,101 @@
     "    resultado_prueba, p_value = prueba_diferencia_eventos(evento, users_grupo_1, users_grupo_2)\n",
     "    print(resultado_prueba)\n",
     "    print(f\"Valor p para '{evento}': {p_value}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No hay evidencia suficiente para afirmar que hay una diferencia estadísticamente significativa entre los grupos para el evento 'MainScreenAppear'.\n",
+      "No hay evidencia suficiente para afirmar que hay una diferencia estadísticamente significativa entre los grupos para el evento 'OffersScreenAppear'.\n",
+      "No hay evidencia suficiente para afirmar que hay una diferencia estadísticamente significativa entre los grupos para el evento 'CartScreenAppear'.\n",
+      "No hay evidencia suficiente para afirmar que hay una diferencia estadísticamente significativa entre los grupos para el evento 'PaymentScreenSuccessful'.\n",
+      "No hay evidencia suficiente para afirmar que hay una diferencia estadísticamente significativa entre los grupos para el evento 'Tutorial'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cantidad de usuarios y usuarias que realizaron los eventos más populares en el primer grupo\n",
+    "usuarios_eventos_246 = {\n",
+    "    'MainScreenAppear': 2450,\n",
+    "    'OffersScreenAppear': 1542,\n",
+    "    'CartScreenAppear': 1266,\n",
+    "    'PaymentScreenSuccessful': 1200,\n",
+    "    'Tutorial': 278\n",
+    "}\n",
+    "\n",
+    "# Cantidad de usuarios y usuarias que realizaron los eventos más populares en el segundo grupo\n",
+    "usuarios_eventos_247 = {\n",
+    "    'MainScreenAppear': 2476,\n",
+    "    'OffersScreenAppear': 1520,\n",
+    "    'CartScreenAppear': 1238,\n",
+    "    'PaymentScreenSuccessful': 1158,\n",
+    "    'Tutorial': 283\n",
+    "}\n",
+    "# Calcular la proporción de usuarios y usuarias para cada evento en el primer grupo\n",
+    "proporciones_246 = {}\n",
+    "total_usuarios_246 = sum(usuarios_eventos_246.values())\n",
+    "for evento, usuarios in usuarios_eventos_246.items():\n",
+    "    proporciones_246[evento] = (usuarios / total_usuarios_246) * 100\n",
+    "\n",
+    "# Calcular la proporción de usuarios y usuarias para cada evento en el segundo grupo\n",
+    "proporciones_247 = {}\n",
+    "total_usuarios_247 = sum(usuarios_eventos_247.values())\n",
+    "for evento, usuarios in usuarios_eventos_247.items():\n",
+    "    proporciones_247[evento] = (usuarios / total_usuarios_247) * 100\n",
+    "import scipy.stats as stats\n",
+    "\n",
+    "alpha = 0.05  # Nivel de significancia\n",
+    "\n",
+    "for evento in usuarios_eventos_246.keys():\n",
+    "    usuarios_grupo_1 = usuarios_eventos_246[evento]\n",
+    "    usuarios_grupo_2 = usuarios_eventos_247[evento]\n",
+    "    \n",
+    "    statistic, p_value = stats.mannwhitneyu([usuarios_grupo_1], [usuarios_grupo_2])\n",
+    "\n",
+    "    if p_value < alpha:\n",
+    "        print(f\"Hay una diferencia estadísticamente significativa entre los grupos para el evento '{evento}'.\")\n",
+    "    else:\n",
+    "        print(f\"No hay evidencia suficiente para afirmar que hay una diferencia estadísticamente significativa entre los grupos para el evento '{evento}'.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No hay evidencia suficiente para afirmar que hay una diferencia estadísticamente significativa entre los grupos para el evento 'MainScreenAppear'.\n",
+      "No hay evidencia suficiente para afirmar que hay una diferencia estadísticamente significativa entre los grupos para el evento 'OffersScreenAppear'.\n",
+      "No hay evidencia suficiente para afirmar que hay una diferencia estadísticamente significativa entre los grupos para el evento 'CartScreenAppear'.\n",
+      "No hay evidencia suficiente para afirmar que hay una diferencia estadísticamente significativa entre los grupos para el evento 'PaymentScreenSuccessful'.\n",
+      "No hay evidencia suficiente para afirmar que hay una diferencia estadísticamente significativa entre los grupos para el evento 'Tutorial'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Realizar la comparación entre los grupos para cada evento\n",
+    "for index, row_246 in top_events_246.iterrows():\n",
+    "    evento = row_246['event_name']\n",
+    "    usuarios_grupo_1 = row_246['user_id']\n",
+    "    usuarios_grupo_2 = top_events_247.loc[top_events_247['event_name'] == evento, 'user_id'].iloc[0]\n",
+    "    \n",
+    "    statistic, p_value = stats.mannwhitneyu([usuarios_grupo_1], [usuarios_grupo_2])\n",
+    "\n",
+    "    if p_value < 0.05:\n",
+    "        print(f\"Hay una diferencia estadísticamente significativa entre los grupos para el evento '{evento}'.\")\n",
+    "    else:\n",
+    "        print(f\"No hay evidencia suficiente para afirmar que hay una diferencia estadísticamente significativa entre los grupos para el evento '{evento}'.\")"
    ]
   },
   {
